--- a/docker.env.example
+++ b/docker.env.example
@@ -6,3 +6,7 @@ REDMINE_CONTAINER_URL=http://redmine:8080
 RAILS_ENV=development
 RAILS_RELATIVE_URL_ROOT=/
 SECRET_KEY_BASE=0123456789ABCDEF
+
+# Rails development hosts for GitHub Codespaces
+# https://guides.rubyonrails.org/configuring.html#actiondispatch-hostauthorization
+RAILS_DEVELOPMENT_HOSTS=.app.github.dev
