--- a/compose.yml
+++ b/compose.yml
@@ -2,22 +2,10 @@ x-redmine: &redmine
   container_name: redmine
   image: redmine
   build: .
-  command: ['rails']
   env_file:
     - docker.env
   ports:
     - 8080:8080
-    - 3333:2222 # 2222 is used by Codespaces
-  volumes:
-    - ./data/wwwroot:/home/site/wwwroot
-
-x-sidekiq: &sidekiq
-  container_name: sidekiq
-  image: redmine
-  build: .
-  command: ['sidekiq']
-  env_file:
-    - docker.env
   volumes:
     - ./data/wwwroot:/home/site/wwwroot
 
@@ -26,58 +14,29 @@ services:
     <<: *redmine
     environment:
       DATABASE_URL: sqlite3:/home/site/wwwroot/redmine.sqlite3
-    depends_on: [redis]
     profiles: [sqlite]
 
   redmine-mysql:
     <<: *redmine
     environment:
       DATABASE_URL: mysql2://redmineuser:redminesecret@mysql/redminedb?encoding=utf8mb4
-    depends_on: [mysql, redis]
+    depends_on: [mysql]
     profiles: [mysql]
 
   redmine-mariadb:
     <<: *redmine
     environment:
       DATABASE_URL: mysql2://redmineuser:redminesecret@mariadb/redminedb?encoding=utf8mb4
-    depends_on: [mariadb, redis]
+    depends_on: [mariadb]
     profiles: [mariadb]
 
   redmine-postgres:
     <<: *redmine
     environment:
       DATABASE_URL: postgresql://redmineuser:redminesecret@postgres/redminedb
-    depends_on: [postgres, redis]
+    depends_on: [postgres]
     profiles: [postgres]
   
-  sidekiq-sqlite:
-    <<: *sidekiq
-    environment:
-      DATABASE_URL: sqlite3:/home/site/wwwroot/redmine.sqlite3
-    depends_on: [redis]
-    profiles: [sqlite]
-
-  sidekiq-mysql:
-    <<: *sidekiq
-    environment:
-      DATABASE_URL: mysql2://redmineuser:redminesecret@mysql/redminedb?encoding=utf8mb4
-    depends_on: [mysql, redis]
-    profiles: [mysql]
-
-  sidekiq-mariadb:
-    <<: *sidekiq
-    environment:
-      DATABASE_URL: mysql2://redmineuser:redminesecret@mariadb/redminedb?encoding=utf8mb4
-    depends_on: [mariadb, redis]
-    profiles: [mariadb]
-
-  sidekiq-postgres:
-    <<: *sidekiq
-    environment:
-      DATABASE_URL: postgresql://redmineuser:redminesecret@postgres/redminedb
-    depends_on: [postgres, redis]
-    profiles: [postgres]
-
   mysql:
     container_name: redmine-db
     image: mysql:latest
@@ -104,8 +63,3 @@ services:
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
     profiles: [postgres]
-
-  redis:
-    image: redis:latest
-    volumes:
-      - ./data/redis:/data
